# SimpleHotReload

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml
documentation/: CMakeLists.txt
include/: foo.h  hot_reload.h
source/: foo.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: test.cpp
